profiling-using-exp-runner/backup_FINAL_RESULTS/fibonacci_experiment_2/run_0_repetition_0/energibridge.log
sampling interval: 200, target function: fibonacci, input size: 10
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.fibonacci as module; X = 10; module.fibonacci(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.271194114685057 for 0.23146963 sec of execution.
